--- a/src/containers/CountryContainer.css
+++ b/src/containers/CountryContainer.css
@@ -1,17 +1,29 @@
-.countryContainer{
+/* Title and List Header Styling */
+h1 {
+    text-align: center;
+    color: #113f67;
+    padding-top: 40px;
+  }
+
+h2 {
+    color: #113f67;
+}
+
+/* ensures Still to Visit/ Visited lists are next to eachother */
+main {
     display: flex;
     width: 90%;
     padding: auto;
-    
 }
 
+/* Ensures the lists are formatted nicely in the middle of the page */
 .visitedCountryList, .countryList {
     text-align: center;
     width: 70%;
     align-items: center;
     padding-left: 130px;
 }
-
+/* Search form styling */
 .form{
     width: 53%;
     text-align: center;
